# ei

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
data/: tickers.txt
ei/: service.py
ei/repos/: __init__.py  stock_data_repos.py
ei/scrapers/: historical_data_scraper.py
ei/utils/: __init__.py  clogging.py  config_loader.py
