[build-system]
requires = ["setuptools >= 69.5.1"]
build-backend = "setuptools.build_meta"
[project]
dynamic = ["version"]
name = "ei"
dependencies = ["matplotlib","numpy","scipy","plotly","pandas","heracless","polars","h5py"]
requires-python = ">= 3.11"
authors = [
    {name = "Felix Schelling", email = "felix.schelling@protonmail.com"},
    {name = "Marie Schwarz", email = "marie.schwarz@gmail.com"},
]
description = "A desperate attempt to escape the idiocracy"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    # How mature is this porject? Common values are
    # 3 - Alpha
    # 4 - Beta
    # 5 - Production / Stable
    "Development Status :: 3 - Alpha",
    # Indicate audience
    "Intended Audience :: Researchers",
    "Programming Lanugage :: Python :: 3.12",
]
[tool.setuptools]
package-dir = {"" = "."}
[project.urls]
Repository = "https://github.com/felixscode/ei.git"
[tool.black]
line-length = 120
